--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -1,4 +1,4 @@
 body
-  background-color deepskyblue
-  color #7f7f7f
-  transition: all .1s ease
+  //background-color deepskyblue
+  //color #7f7f7f
+  //transition: all .1s ease
