--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,5 +1,5 @@
 doctype html
 html
     head
-        meta(charset="utf-8")
+        meta(charset="utf-8" name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0")
     body
