--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -78,7 +78,7 @@ body {
   //background: -moz-radial-gradient(ellipse at center, #2F1C5B 1%,#201A30 100%);
   //background: -o-radial-gradient(ellipse at center, #2F1C5B 1%,#201A30 100%);
   //background: -ms-radial-gradient(ellipse at center, #2F1C5B 1%,#201A30 100%);
-  background: radial-gradient(ellipse at center, #272935 1%,#04081c 100%);
+  background: radial-gradient(ellipse at center, #181B2D 0%,#200828 100%);
 
 #stats
   display: none;
